--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
       <h2>Get In Touch</h2>
       <h3>I am currently available for freelance.</h3>
       <p class="contact-message">If you want to hire me to develop your website, mobile application:</p>
-      <a class="btn" href="mailto:reaaldev@gmail.com">CONTACT ME</a>
+      <a class="btn" href="game.html">JOGAR/a>
+      <!--<a class="btn" href="mailto:reaaldev@gmail.com">CONTACT ME</a>-->
     </div>
   </div>
 
